@startuml OCP
interface Resource
{
       +allocate():int
       +markSlotFree(int resourceId):void;
       +markSlotBusy(int resourceId):void;
       +finsFreeSlot():int
}
class SpaceResource implements Resource
{
       +allocate():int
       +markSlotFree(int resourceId):void;
       +markSlotBusy(int resourceId):void;
       +finsFreeSlot():int
}
class TimeResource implements Resource
{
       +allocate():int
       +markSlotFree(int resourceId):void;
       +markSlotBusy(int resourceId):void;
       +finsFreeSlot():int
}
class ResourceAllocator
{
       +allocate(Resource resource):int;
       +free(Resource resource,int resourceId):void;
       -{static}  final int INVALID_RESOURCE_ID = -1;
}
ResourceAllocator -->SpaceResource:use
ResourceAllocator -->TimeResource:use
@enduml